--- a/src/styles/screen.sass
+++ b/src/styles/screen.sass
@@ -52,7 +52,7 @@ button
     text-align: center
     font-size: 4.25em
 
-.Win
+.WinStatement
   font-family: $module-font
   text-shadow: 0px 0px 6px rgba(255,255,255,0.7)
   text-align: center
